--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,210 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* header */
+header {
+  min-height: 40px;
+  border-bottom: 1px solid #f2f2f2;
+  padding: 10px 40px;
+}
+
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+header a {
+  margin: 0 10px;
+  text-decoration: none;
+  color: gray;
+}
+
+header a:hover,
+header a:focus {
+  color: black;
+}
+
+header .header__logo {
+  color: black;
+  font-weight: 600;
+}
+
+/* post list */
+.post__list {
+  min-height: 80vh;
+  padding: 20px 40px;
+  text-align: center;
+}
+
+/* post navigation */
+.post__navigation {
+  display: flex;
+  gap: 1rem;
+  margin: 0 auto;
+  max-width: 680px;
+  font-size: 1rem;
+  color: gray;
+  cursor: pointer;
+  padding: 48px 20px 0px 20px;
+}
+
+.post__navigation--active {
+  color: black;
+  font-weight: 600;
+}
+
+.post__list,
+.post__detail {
+  min-height: 90vh;
+  padding: 20px;
+  text-align: left;
+  max-width: 680px;
+  margin: 0 auto;
+}
+
+.post__list a {
+  text-decoration: none;
+  color: black;
+}
+
+.post__box {
+  padding-block: 24px;
+  border-top: 1px solid #eee;
+}
+
+.post__profile-box {
+  display: flex;
+  gap: 8px;
+  font-size: 14px;
+  align-items: center;
+}
+
+.post__profile {
+  width: 36px;
+  height: 36px;
+  background-color: #eee;
+  border-radius: 50%;
+}
+
+.post__date,
+.post__author-name {
+  color: gray;
+}
+
+.post__title {
+  font-size: 20px;
+  font-weight: 600;
+  margin: 14px 0px;
+}
+
+.post__text {
+  color: dimgray;
+  font-size: 16px;
+}
+
+.post__utils-box {
+  display: flex;
+  gap: 8px;
+  flex-direction: row-reverse;
+  font-size: 14px;
+  color: gray;
+}
+
+.post__delete:hover,
+.post__delete:focus {
+  color: black;
+}
+
+.post__edit:hover,
+.post__edit:focus {
+  color: black;
+}
+
+/* post__detail */
+.post__detail .post__title {
+  font-size: 36px;
+  line-height: 40px;
+}
+
+.post__detail .post__utils-box {
+  padding: 10px 0px;
+  border-block: 1px solid #f2f2f2;
+  flex-direction: row;
+}
+
+.post__detail .post__text {
+  padding: 20px 0px;
+}
+
+.post__detail .post__profile-box {
+  padding: 10px 0px;
+}
+
+/* footer  */
+footer {
+  min-height: 15vh;
+  background-color: #eee;
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  justify-content: center;
+}
+
+footer a {
+  text-decoration: none;
+  color: gray;
+}
+
+footer a:hover,
+footer a:focus {
+  color: black;
+}
+
+/* profile */
+.profile__box {
+  display: flex;
+  gap: 18px;
+  align-items: center;
+  font-size: 18px;
+  margin: 0 auto;
+  max-width: 680px;
+  text-align: left;
+  line-height: 24px;
+  justify-content: space-between;
+  padding: 20px;
+}
+
+.flex__box-lg {
+  display: flex;
+  gap: 18px;
+  align-items: center;
+}
+
+.profile__image {
+  width: 72px;
+  height: 72px;
+  background-color: #eee;
+  border-radius: 50%;
+}
+
+.profile__name {
+  font-size: 1rem;
+  padding-top: 4px;
+}
+
+.profile__email {
+  font-weight: 500;
+}
+
+.profile__logout {
+  color: gray;
+  font-size: 14px;
+  text-decoration: none;
+}
+
+.profile__logout:hover,
+.profile__logout:focus {
+  color: black;
+}
