--- a/src/index.css
+++ b/src/index.css
@@ -1,441 +1,446 @@
 body {
-	margin: 0;
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-		'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-		sans-serif;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-		monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
 }
 
 /* header */
 header {
-	min-height: 40px;
-	border-bottom: 1px solid #f2f2f2;
-	padding: 10px 40px;
+  min-height: 40px;
+  border-bottom: 1px solid #f2f2f2;
+  padding: 10px 40px;
 }
 
 .header {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 header a {
-	margin: 0 10px;
-	text-decoration: none;
-	color: gray;
+  margin: 0 10px;
+  text-decoration: none;
+  color: gray;
 }
 
 header a:hover,
 header a:focus {
-	color: black;
+  color: black;
 }
 
 header .header__logo {
-	color: black;
-	font-weight: 600;
+  color: black;
+  font-weight: 600;
 }
 
 /* post list */
 .post__list {
-	min-height: 80vh;
-	padding: 20px 40px;
-	text-align: center;
+  min-height: 80vh;
+  padding: 20px 40px;
+  text-align: center;
 }
 
 /* post navigation */
 .post__navigation {
-	display: flex;
-	gap: 1rem;
-	margin: 0 auto;
-	max-width: 680px;
-	font-size: 1rem;
-	color: gray;
-	cursor: pointer;
-	padding: 48px 20px 0px 20px;
+  display: flex;
+  gap: 1rem;
+  margin: 0 auto;
+  max-width: 680px;
+  font-size: 1rem;
+  color: gray;
+  cursor: pointer;
+  padding: 48px 20px 0px 20px;
 }
 
 .post__navigation--active {
-	color: black;
-	font-weight: 600;
+  color: black;
+  font-weight: 600;
 }
 
 .post__list,
 .post__detail {
-	min-height: 90vh;
-	padding: 20px;
-	text-align: left;
-	max-width: 680px;
-	margin: 0 auto;
+  min-height: 90vh;
+  padding: 20px;
+  text-align: left;
+  max-width: 680px;
+  margin: 0 auto;
 }
 
 .post__list a {
-	text-decoration: none;
-	color: black;
+  text-decoration: none;
+  color: black;
 }
 
 .post__box {
-	padding-block: 24px;
-	border-top: 1px solid #eee;
+  padding-block: 24px;
+  border-top: 1px solid #eee;
 }
 
 .post__profile-box {
-	display: flex;
-	gap: 8px;
-	font-size: 14px;
-	align-items: center;
+  display: flex;
+  gap: 8px;
+  font-size: 14px;
+  align-items: center;
 }
 
 .post__profile {
-	width: 36px;
-	height: 36px;
-	background-color: #eee;
-	border-radius: 50%;
+  width: 36px;
+  height: 36px;
+  background-color: #eee;
+  border-radius: 50%;
 }
 
 .post__date,
 .post__author-name {
-	color: gray;
+  color: gray;
 }
 
 .post__title {
-	font-size: 20px;
-	font-weight: 600;
-	margin: 14px 0px;
+  font-size: 20px;
+  font-weight: 600;
+  margin: 14px 0px;
 }
 
 .post__text {
-	color: dimgray;
-	font-size: 16px;
+  color: dimgray;
+  font-size: 16px;
 }
 
 .post__utils-box {
-	display: flex;
-	gap: 8px;
-	flex-direction: row-reverse;
-	font-size: 14px;
-	color: gray;
+  display: flex;
+  gap: 8px;
+  flex-direction: row-reverse;
+  font-size: 14px;
+  color: gray;
 }
 
 .post__delete:hover,
 .post__delete:focus {
-	color: black;
+  color: black;
 }
 .post__delete {
-	cursor: pointer;
+  cursor: pointer;
 }
 
 .post__edit:hover,
 .post__edit:focus,
 .post__edit a:hover,
 .post__edit a:focus {
-	color: black;
+  color: black;
 }
 
 .post__edit a {
-	text-decoration: none;
-	color: gray;
+  text-decoration: none;
+  color: gray;
 }
 
 /* post__detail */
 .post__detail .post__title {
-	font-size: 36px;
-	line-height: 40px;
+  font-size: 36px;
+  line-height: 40px;
 }
 
 .post__detail .post__utils-box {
-	padding: 10px 0px;
-	border-block: 1px solid #f2f2f2;
-	flex-direction: row;
+  padding: 10px 0px;
+  border-block: 1px solid #f2f2f2;
+  flex-direction: row;
 }
 
 .post__detail .post__text {
-	padding: 20px 0px;
+  padding: 20px 0px;
 }
 
 .post__detail .post__profile-box {
-	padding: 10px 0px;
+  padding: 10px 0px;
 }
 
 /* footer  */
 footer {
-	min-height: 15vh;
-	background-color: #eee;
-	display: flex;
-	gap: 20px;
-	align-items: center;
-	justify-content: center;
+  min-height: 15vh;
+  background-color: #eee;
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  justify-content: center;
 }
 
 footer a {
-	text-decoration: none;
-	color: gray;
+  text-decoration: none;
+  color: gray;
 }
 
 footer a:hover,
 footer a:focus {
-	color: black;
+  color: black;
 }
 
 /* profile */
 .profile__box {
-	display: flex;
-	gap: 18px;
-	align-items: center;
-	font-size: 18px;
-	margin: 0 auto;
-	max-width: 680px;
-	text-align: left;
-	line-height: 24px;
-	justify-content: space-between;
-	padding: 20px;
+  display: flex;
+  gap: 18px;
+  align-items: center;
+  font-size: 18px;
+  margin: 0 auto;
+  max-width: 680px;
+  text-align: left;
+  line-height: 24px;
+  justify-content: space-between;
+  padding: 20px;
 }
 
 .flex__box-lg {
-	display: flex;
-	gap: 18px;
-	align-items: center;
+  display: flex;
+  gap: 18px;
+  align-items: center;
 }
 
 .profile__image {
-	width: 72px;
-	height: 72px;
-	background-color: #eee;
-	border-radius: 50%;
+  width: 72px;
+  height: 72px;
+  background-color: #eee;
+  border-radius: 50%;
 }
 
 .profile__name {
-	font-size: 1rem;
-	padding-top: 4px;
+  font-size: 1rem;
+  padding-top: 4px;
 }
 
 .profile__email {
-	font-weight: 500;
+  font-weight: 500;
 }
 
 .profile__logout {
-	color: gray;
-	font-size: 14px;
-	text-decoration: none;
+  color: gray;
+  font-size: 14px;
+  text-decoration: none;
 }
 
 .profile__logout:hover,
 .profile__logout:focus {
-	color: black;
+  color: black;
 }
 
 /* carousel */
 
 .carousel {
-	margin: 0 auto;
-	max-width: 980px;
-	margin-top: 36px;
+  margin: 0 auto;
+  max-width: 980px;
+  margin-top: 36px;
 }
 
 ul.carousel__slides {
-	display: block;
-	position: relative;
-	height: 400px;
-	margin: 0;
-	padding: 0;
-	overflow: hidden;
-	list-style: none;
+  display: block;
+  position: relative;
+  height: 400px;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  list-style: none;
 }
 
 .carousel__slides * {
-	user-select: none;
-	-ms-user-select: none;
-	-moz-user-select: none;
-	-khtml-user-select: none;
-	-webkit-user-select: none;
-	-webkit-touch-callout: none;
+  user-select: none;
+  -ms-user-select: none;
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -webkit-touch-callout: none;
 }
 
 ul.carousel__slides input {
-	display: none;
+  display: none;
 }
 
 .carousel__slide-container {
-	display: block;
+  display: block;
 }
 
 .carousel__slide-img {
-	display: block;
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	top: 0;
-	opacity: 0;
-	transition: all 0.7s ease-in-out;
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  opacity: 0;
+  transition: all 0.7s ease-in-out;
 }
 
 .carousel__slide-img img {
-	width: auto;
-	min-width: 100%;
-	height: 100%;
+  width: auto;
+  min-width: 100%;
+  height: 100%;
 }
 
 .carousel__controls {
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	z-index: 999;
-	font-size: 100px;
-	line-height: 400px;
-	color: #fff;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 999;
+  font-size: 100px;
+  line-height: 400px;
+  color: #fff;
 }
 
 .carousel__controls label {
-	display: none;
-	position: absolute;
-	padding: 0 20px;
-	opacity: 0;
-	transition: opacity 0.2s;
-	cursor: pointer;
+  display: none;
+  position: absolute;
+  padding: 0 20px;
+  opacity: 0;
+  transition: opacity 0.2s;
+  cursor: pointer;
 }
 
 .carousel__slide-img:hover + .carousel__controls label {
-	opacity: 0.5;
+  opacity: 0.5;
 }
 
 .carousel__controls label:hover {
-	opacity: 1;
+  opacity: 1;
 }
 
 .carousel__controls .carousel__slide-prev {
-	width: 49%;
-	text-align: left;
-	left: 0;
+  width: 49%;
+  text-align: left;
+  left: 0;
 }
 
 .carousel__controls .carousel__slide-next {
-	width: 49%;
-	text-align: right;
-	right: 0;
+  width: 49%;
+  text-align: right;
+  right: 0;
 }
 
 .carousel__dots {
-	position: absolute;
-	left: 0;
-	right: 0;
-	bottom: 20px;
-	z-index: 999;
-	text-align: center;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 20px;
+  z-index: 999;
+  text-align: center;
 }
 
 .carousel__dots .carousel__dot {
-	display: inline-block;
-	width: 10px;
-	height: 10px;
-	border-radius: 50%;
-	background-color: #fff;
-	opacity: 0.5;
-	margin: 10px;
-	cursor: pointer;
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: #fff;
+  opacity: 0.5;
+  margin: 10px;
+  cursor: pointer;
 }
 
 input:checked + .carousel__slide-container .carousel__slide-img {
-	opacity: 1;
-	transform: scale(1);
-	transition: opacity 1s ease-in-out;
+  opacity: 1;
+  transform: scale(1);
+  transition: opacity 1s ease-in-out;
 }
 
 input:checked + .carousel__slide-container .carousel__controls label {
-	display: block;
+  display: block;
 }
 
 input#img-1:checked ~ .carousel__dots label#img-dot-1,
 input#img-2:checked ~ .carousel__dots label#img-dot-2,
 input#img-3:checked ~ .carousel__dots label#img-dot-3 {
-	opacity: 1;
+  opacity: 1;
 }
 
 input:checked + .carousel__slide-container .nav label {
-	display: block;
+  display: block;
 }
 
 /* form */
 .form {
-	margin: 0 auto;
-	max-width: 680px;
-	padding: 20px;
-	margin-block: 20px;
+  margin: 0 auto;
+  max-width: 680px;
+  padding: 20px;
+  margin-block: 20px;
 }
 
 .form input {
-	height: 20px;
-	padding: 10px 10px;
-	font-size: 16px;
-	border-radius: 0.3rem;
-	border: 1px solid gray;
-	width: 96%;
-	max-width: 680px;
+  height: 20px;
+  padding: 10px 10px;
+  font-size: 16px;
+  border-radius: 0.3rem;
+  border: 1px solid gray;
+  width: 96%;
+  max-width: 680px;
 }
 
 .form textarea {
-	min-height: 400px;
-	line-height: 1.5;
-	padding: 10px 10px;
-	font-size: 16px;
-	border-radius: 0.3rem;
-	border: 1px solid gray;
-	width: 96%;
-	max-width: 680px;
+  min-height: 400px;
+  line-height: 1.5;
+  padding: 10px 10px;
+  font-size: 16px;
+  border-radius: 0.3rem;
+  border: 1px solid gray;
+  width: 96%;
+  max-width: 680px;
 }
 
 .form .form__block {
-	margin-top: 20px;
-	width: 100%;
+  margin-top: 20px;
+  width: 100%;
 }
 
 .form label {
-	display: block;
-	margin-top: 20px;
-	margin-bottom: 10px;
-	font-weight: 600;
+  display: block;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  font-weight: 600;
 }
 
 .form .form__btn--submit {
-	width: 100%;
-	height: 48px;
-	padding: 10px 10px;
-	cursor: pointer;
-	font-size: 1rem;
-	margin: 0 auto;
-	float: right;
-	background-color: #2653eb;
-	color: white;
+  width: 100%;
+  height: 48px;
+  padding: 10px 10px;
+  cursor: pointer;
+  font-size: 1rem;
+  margin: 0 auto;
+  float: right;
+  background-color: #2653eb;
+  color: white;
 }
 
 .form .form__btn--submit:hover,
 .form .form__btn--submit:focus {
-	background-color: #1945a4;
+  background-color: #1945a4;
 }
 
 /* login form */
 .form--lg {
-	min-height: 70vh;
-	margin-top: 10vh;
+  min-height: 70vh;
+  margin-top: 10vh;
 }
 
 .form__title {
-	text-align: center;
-	margin-bottom: 4px;
+  text-align: center;
+  margin-bottom: 4px;
 }
 
 .form__link {
-	margin-left: 10px;
-	text-decoration: none;
-	color: gray;
+  margin-left: 10px;
+  text-decoration: none;
+  color: gray;
 }
 
 .form__link:hover,
 .form__link:focus {
-	color: black;
+  color: black;
+}
+
+.form__error {
+  font-size: 1rem;
+  color: red;
 }
