--- a/src/index.css
+++ b/src/index.css
@@ -444,3 +444,18 @@ input:checked + .carousel__slide-container .nav label {
   font-size: 1rem;
   color: red;
 }
+
+/* loader */
+.loader {
+  width: 48px;
+  height: 48px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  border: 5px solid #2653eb;
+  border-radius: 50%;
+  z-index: 9999;
+}
